--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "calcjs": "^1.0.0",
     "clipboard": "^2.0.0",
     "codemirror": "^5.38.0",
     "countup": "^1.8.2",
@@ -23,7 +24,7 @@
     "iview": "^3.4.1",
     "iview-area": "^1.5.17",
     "js-cookie": "^2.2.0",
-    "mathjs": "^6.6.5",
+    "number-precision": "^1.5.0",
     "simplemde": "^1.11.2",
     "sortablejs": "^1.7.0",
     "tree-table-vue": "^1.1.0",
@@ -34,6 +35,7 @@
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "wangeditor": "^3.1.1",
+    "webpack-merge": "^5.7.3",
     "xlsx": "^0.13.3"
   },
   "devDependencies": {
